full-infrastructure/security-groups.tf
#resource "aws_security_group" "allow_http" {
#  name   = "first-lab"
#  vpc_id = aws_vpc.main_vpc.id
#
#  ingress {
#    description = "HTTP from VPC"
#    from_port   = 80
#    to_port     = 80
#    protocol    = "tcp"
#    cidr_blocks = [aws_vpc.main_vpc.cidr_block]
#  }
#
#  egress {
#    from_port   = 0
#    to_port     = 0
#    protocol    = "-1"
#    cidr_blocks = ["0.0.0.0/0"]
#  }
#}
#
#
#resource "aws_security_group" "alb_sg" {
#  name   = "alb-sg"
#  vpc_id = aws_vpc.main_vpc.id
#
#  ingress {
#    description = "HTTP from VPC"
#    from_port   = 80
#    to_port     = 80
#    protocol    = "tcp"
#    cidr_blocks = ["94.156.24.20/32"]
#  }
#
#  egress {
#    from_port   = 0
#    to_port     = 0
#    protocol    = "-1"
#    cidr_blocks = ["0.0.0.0/0"]
#  }
#}
